working on Prob 5, text added okay, sort is failing terribly

--- a/table.html
+++ b/table.html
@@ -146,7 +146,7 @@
   					 if(num!=1){
   					 	num=1;
   					 	tbody.selectAll("tr").sort(function(a, b){
-  					 	 //console.log("a is " + a[0]);
+  					 	 //console.log(tbody.selectAll("tr"));
   					 	 //console.log("b is " + b[0]);
   					 	// console.log(" i is" + i);
   					 	 //return compareNumbers(d3.ascending(a[0], b[0]) );
