--- a/table.html
+++ b/table.html
@@ -111,7 +111,7 @@
 		//function for sorting
 		function sortCol(d, i) {
 				//console.log("Clicked");
-				//console.log(" i is" + i+"d is "+ d);
+				console.log("d is "+ d);
 				sorted = i;
 				//console.log("sorted is " + i);
 				if(i==3){
